--- a/Claims/Claims/Claims_Testsuite.csproj
+++ b/Claims/Claims/Claims_Testsuite.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DatabaseConnections.OleDb" Version="2.0.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.18.0" />
     <PackageReference Include="MDF.FrameWork" Version="1.0.0" />
     <PackageReference Include="Microsoft.CodeCoverage" Version="17.3.2" />
@@ -28,6 +29,7 @@
     <PackageReference Include="Selenium.Support" Version="4.5.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.5.1" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="107.0.5304.6200" />
+    <PackageReference Include="System.Data.OleDb" Version="7.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
     <PackageReference Include="WebDriverManager" Version="2.16.0" />
   </ItemGroup>
